// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TestGenerator functions parseOavVariable 1`] = `
Array [
  "abc",
]
`;

exports[`TestGenerator functions parseOavVariable 2`] = `
Array [
  "\\"$(abc)\\"",
]
`;

exports[`TestGenerator functions parseOavVariable 3`] = `
Array [
  "abc",
  "\\" with tail txt\\"",
]
`;

exports[`TestGenerator functions parseOavVariable 4`] = `
Array [
  "\\"head texted \\"",
  "abc",
]
`;

exports[`TestGenerator functions parseOavVariable 5`] = `
Array [
  "\\"multiple \\"",
  "abc",
  "\\" variables \\"",
  "dbe",
  "\\" ... \\"",
  "abc",
  "\\".\\"",
]
`;
